@@ -366,6 +366,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #6857: Default format() alignment should be '>' for Decimal
+  instances.
+
 - Issue #6795: int(Decimal('nan')) now raises ValueError instead of
   returning NaN or raising InvalidContext.  Also, fix infinite recursion
   in long(Decimal('nan')).
